<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="retrofit_by_square_inc">Retrofit - Type-safe HTTP client for Android and Java by Square Inc</string>
    <string name="current_repository_by_udacity">LoadApp - current repository by Udacity</string>
    <string name="glide_by_bumptech">Glide - Image loading library by BumpTech</string>
    <string name="select_file_to_download_message">Please select the file to download</string>

    <string name="load_app_channel_id">channel_id1</string>
    <string name="load_app_channel_name">Load</string>
    <string name="channel_description">Download completed notifier</string>
    <string name="details_file_name_lable">File Name:</string>
    <string name="details_status_label">Status</string>
    <string name="details_action_ok_button">OK</string>
</resources>
